--- a/style.css
+++ b/style.css
@@ -2,3 +2,9 @@ html {
   height: 100%;
   width: 100%;
 }
+
+* { margin : 0px ; box-sizing : border-box;}
+
+header {color:White; background:Green;}
+
+header, main, footer {padding: 5px; border: 1px solid Tomato;}
