--- a/style.css
+++ b/style.css
@@ -7,4 +7,6 @@ html {
 
 header {color:White; background:Green;}
 
-header, main, footer {padding: 5px; border: 1px solid Tomato;}
+main {padding: 5px; border: 1px solid Tomato;}
+
+nav li {display:inline; border: 1px solid Green;}
