--- a/style.css
+++ b/style.css
@@ -11,6 +11,6 @@ main {padding: 5px; border: 1px solid Orange;}
 
 nav li {display:inline; border: 1px solid Green;}
 
-main figure { display: block; align-content: center; background:Orange;}
+main figure img { display: block; align-content: center; background:Orange; margin-left: auto; margin-right:auto; padding: 5px; border: 30px navy;}
 
 figcaption { display: block;color:Navy;}
