--- a/style.css
+++ b/style.css
@@ -5,13 +5,17 @@ html {
 
 * { margin : 0px ; box-sizing : border-box;}
 
-header {color:White; background:Green;}
+header {color:White; text-align: center; background:Green;}
 
 main {padding: 5px; border: 1px solid Orange;}
+
+nav { margin-left: auto; margin-right: auto;}
 
 nav li {display:inline; border: 1px solid Green;}
 
 main figure img { display: block; align-content: center; background:Orange; margin-left: auto; margin-right:auto; padding: 5px; border: 30px navy;}
+
+main h3 {color:White; text-align: center; background:Green;}
 
 figcaption { display: block;color:Navy;}
 
