--- a/style.css
+++ b/style.css
@@ -12,11 +12,13 @@ header img{ display: inline-block; width: 40px; height: 40px; vertical-align: mi
 
 header h1{display: inline-block; vertical-align: middle;}
 
-main {padding: 5px; border: 1px solid Orange;}
-
 nav {display:block;  text-align: center; margin-left: auto; margin-right: auto;}
 
 nav li { display:inline-block; }
+
+main {padding: 5px; border: 1px solid Orange;}
+
+main h2{ color: Orange; text-align:center;}
 
 main figure img { display: block; align-content: center; background:Orange; margin-left: auto; margin-right:auto; padding: 5px; border: 30px navy;}
 
