--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html {
   height: 100%;
   width: 100%;
+  background-image: linear-gradient(to right, green , white);
 }
 
 * { margin : 0px ; box-sizing : border-box;}
